--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_margin">4dp</item>
         <item name="android:backgroundTint">@drawable/button_background</item>
+<!--        no funciona esto de aqui arriba -->
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">25sp</item>
         <item name="android:gravity">center</item>
